--- a/index.html
+++ b/index.html
@@ -129,6 +129,74 @@
                 </div>
             </div>  
         </section>
+
+
+        <section id="third_section">
+            <div class="third_section_div">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+
+            <div class="third_section_div">
+                <h3>Most Read</h3>
+                <div>
+                    <img src="" alt="">
+                </div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </section>
+
+
+        <section id="fourth_section">
+            <h2>Featured Posts</h2>
+
+            <div class="fourth_section_content">
+                <div class="fourth_section_content_div">
+                    <figure>
+                        <img src="" alt=""/>
+                    </figure>
+                    <div class="title">
+                        <h4>JQUERY</h4> 
+                        <span>date xx, xxxx</span>
+                    </div>
+                    <h3><a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, libero dolores, vitae.</a></h3> 
+                </div>  
+
+                <div class="fourth_section_content_div">
+                    <figure>
+                        <img src="" alt=""/>
+                    </figure>
+
+                    <div class="title">
+                        <h4>WEB DESIGN</h4> 
+                        <span>date xx, xxxx</span>
+                    </div>
+                    <h3><a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, libero dolores, vitae.</a></h3> 
+                </div>
+
+                <div class="fourth_section_content_div">
+                    <figure>
+                        <img src="" alt=""/>
+                    </figure>
+
+                    <div class="title">
+                        <h4>WEB DESIGN</h4> 
+                        <span>date xx, xxxx</span>
+                    </div>
+                    <h3><a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, libero dolores, vitae.</a></h3> 
+                </div>
+            </div>
+        </section>
+
+
+        <section class="fifth_section">
+
+        </section>
     </main>
 
 
