first page finished

--- a/index.html
+++ b/index.html
@@ -15,14 +15,21 @@
 <body>
     <nav>
         <ul>
-            <li<a href="#">oi</li>
-            <li>\</li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <h2 id="logo"><span>WEB</span>MAG</h2>
+            <li>News</li>
+            <li>Popular</li>
+            <li>Web Design</li>
+            <li> Javascript</li>
+            <li>Css</li>
+            <li>Jquery</li>
         </ul>
+        <i>
+            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/></svg>
+        </i>
     </nav>
+
+    <hr>
 
    <main>
         <section id="first_section">
@@ -131,34 +138,13 @@
         </section>
 
 
-        <section id="third_section">
-            <div class="third_section_div">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-
-            <div class="third_section_div">
-                <h3>Most Read</h3>
-                <div>
-                    <img src="" alt="">
-                </div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
-        </section>
-
-
         <section id="fourth_section">
             <h2>Featured Posts</h2>
 
             <div class="fourth_section_content">
                 <div class="fourth_section_content_div">
                     <figure>
-                        <img src="" alt=""/>
+                        <img src="./img/img10.jpg" alt=""/>
                     </figure>
                     <div class="title">
                         <h4>JQUERY</h4> 
@@ -169,7 +155,7 @@
 
                 <div class="fourth_section_content_div">
                     <figure>
-                        <img src="" alt=""/>
+                        <img src="./img/img11.jpg" alt=""/>
                     </figure>
 
                     <div class="title">
@@ -181,11 +167,11 @@
 
                 <div class="fourth_section_content_div">
                     <figure>
-                        <img src="" alt=""/>
+                        <img src="./img/img8.jpg" alt=""/>
                     </figure>
 
                     <div class="title">
-                        <h4>WEB DESIGN</h4> 
+                        <h4>JAVASCRIPT</h4> 
                         <span>date xx, xxxx</span>
                     </div>
                     <h3><a href="#">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, libero dolores, vitae.</a></h3> 
@@ -194,14 +180,13 @@
         </section>
 
 
-        <section class="fifth_section">
-
-        </section>
+        <button>LOAD MORE</button>
     </main>
 
+    <hr>
 
     <footer class="footer">
-        <h3>footer</h3>
+        <h3>© Copyright ©2022 All rights reserved | This template is made by Colorlib</h3>
     </footer>    
 </body>
 </html>
